--- a/Programme/openssl/openssl-Latech/FSST-openssl.tex
+++ b/Programme/openssl/openssl-Latech/FSST-openssl.tex
@@ -60,35 +60,6 @@
 \definecolor{mPurple}{rgb}{0.58,0,0.82}
 \definecolor{backgroundColour}{rgb}{255,255,255}
 
-\lstset{
-	basicstyle=\normalfont\ttfamily,
-	numbersep=8pt,
-	showstringspaces=false,
-	breaklines=false,
-	frame=lines,
-	backgroundcolor=\color{background}
-  	alsoletter=-;
-	showtabs=true,
-	showstringspaces=false,
-  	breaklines=true,
-	numbers=left,
-	stepnumber=1,
-	numbersep=10pt,
-	tab=,
-	numberstyle=\tiny,
-	tabsize=4,
-	morecomment=[l][\color{lightgray}]{\\\\},
-	morecomment=[l][\color{lightgray}]{//},
-	morecomment=[l][\color{lightgray}]{\%},
-	morecomment=[s][\color{lightgray}]{/*}{*/},
-	morecomment=[s][\color{lightgray}]{\\*}{*\\},
-	morestring=[s][\color{orange}]{\$}{\$},
-	classoffset=0,
-	keywordstyle=\color{red},
-	morekeywords={cd,ls,mkdir,\$,pdflatex}, % Console Commands
-	classoffset=1,
-}
-
 \lstdefinestyle{StyleVHDL}
 {
     backgroundcolor=\color{backgroundColour},
@@ -111,6 +82,37 @@
     breaklines=true,
     xleftmargin=\parindent,
     language=Python,
+    frame = single,
+    showstringspaces=false,
+    basicstyle=\footnotesize\ttfamily,
+    keywordstyle=\bfseries\color{magenta},
+    commentstyle=\color{mGreen},
+    identifierstyle=\color{blue},
+    stringstyle=\color{orange},
+} 
+\lstdefinestyle{StyleMatlab}
+{
+  backgroundcolor=\color{backgroundColour},   
+  belowcaptionskip=1\baselineskip,
+  breaklines=true,
+  xleftmargin=\parindent,
+  language=Matlab,
+  frame = single,
+  showstringspaces=false,
+  basicstyle=\footnotesize\ttfamily,
+  keywordstyle=\bfseries\color{black},
+  commentstyle=\color{mGreen},
+  identifierstyle=\color{blue},
+  stringstyle=\color{magenta},
+}
+
+\lstdefinestyle{StyleC}
+{
+    backgroundcolor=\color{backgroundColour},   
+    belowcaptionskip=1\baselineskip,
+    breaklines=true,
+    xleftmargin=\parindent,
+    language=C,
     frame = single,
     showstringspaces=false,
     basicstyle=\footnotesize\ttfamily,
