--- a/Programme/openssl/openssl-Latech/FSST-openssl.tex
+++ b/Programme/openssl/openssl-Latech/FSST-openssl.tex
@@ -60,6 +60,35 @@
 \definecolor{mPurple}{rgb}{0.58,0,0.82}
 \definecolor{backgroundColour}{rgb}{255,255,255}
 
+\lstset{
+	% basicstyle=\normalfont\ttfamily,
+	% numbersep=8pt,
+	% showstringspaces=false,
+	% breaklines=false,
+	% frame=lines,
+	% backgroundcolor=\color{background}
+  % 	alsoletter=-;
+	% showtabs=true,
+	% showstringspaces=false,
+  breaklines=true,
+	numbers=left,
+	% stepnumber=1,
+	% numbersep=10pt,
+	% tab=,
+	% numberstyle=\tiny,
+	% tabsize=4,
+	% morecomment=[l][\color{lightgray}]{\\\\},
+	% morecomment=[l][\color{lightgray}]{//},
+	% morecomment=[l][\color{lightgray}]{\%},
+	% morecomment=[s][\color{lightgray}]{/*}{*/},
+	% morecomment=[s][\color{lightgray}]{\\*}{*\\},
+	% morestring=[s][\color{orange}]{\$}{\$},
+	% classoffset=0,
+	% keywordstyle=\color{red},
+	% morekeywords={cd,ls,mkdir,\$,pdflatex}, % Console Commands
+	% classoffset=1,
+}
+
 \lstdefinestyle{StyleVHDL}
 {
     backgroundcolor=\color{backgroundColour},
@@ -185,7 +214,7 @@
   \vspace{-2cm}
   \centering
   \includegraphics[width=\linewidth]{htl-logo.jpg}\\
-  noindent\rule{\linewidth}{1pt}\\
+  \rule{\linewidth}{1pt}\\
   \vspace{50px}
   \Huge\textbf{\textsc{FSST-OpenSSL}}
   \normalsize
@@ -208,7 +237,7 @@
   \maketitle
   \begin{figure}[!htb]
     \centering
-    \includegraphics[scale=1]{OpenSSL.png}
+    \includegraphics[scale=0.5]{OpenSSL.png}
     \label{UART-TitelBild}
   \end{figure}
 
