--- a/Programme/openssl/openssl-Latech/Sections/Aufgabe.tex
+++ b/Programme/openssl/openssl-Latech/Sections/Aufgabe.tex
@@ -1,12 +1,20 @@
 \newpage
-\section{Umsetzung}
+
+\section{Theorie}
 \subsection{OpenSSL}
 
-\subsection{Programm}
+\subsection{AES}
+
+\section{Programm}
 
 \lstinputlisting[language=C, style=StyleC, caption=main.c, captionpos=b, label=main.c]{../../openssl/openssl-Programm/main.c}
 
 \lstinputlisting[language=C, style=StyleC, caption=EVP.c, captionpos=b, label=EVP.c]{../../openssl/openssl-Programm/EVP.c}
 
-
-\subsection{Erklärung}
+\subsubsection{Programm Output:}
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=\linewidth]{Programm-Output.png}
+    \caption{Programm-Output}
+    \label{caption:Programm-Output}
+\end{figure}
