--- a/Programme/openssl/openssl-Latech/Sections/Aufgabe.tex
+++ b/Programme/openssl/openssl-Latech/Sections/Aufgabe.tex
@@ -22,12 +22,9 @@ und darf ohne Lizenzgebühren eingesetzt sowie in Soft- und Hardware implementie
 
 
 \newpage
-\section{Programm}
-
-\lstinputlisting[language=C, style=StyleC, caption=main.c, captionpos=b, label=main.c]{../../openssl/openssl-Programm/main.c}
-
-\lstinputlisting[language=C, style=StyleC, caption=EVP.c, captionpos=b, label=EVP.c]{../../openssl/openssl-Programm/EVP.c}
-
+\section{Erstes - Programm}
+\lstinputlisting[language=C, style=StyleC, caption=alt-main.c, captionpos=b, label=alt-main.c]{../../openssl/openssl-Programm/alt/main.c}
+\lstinputlisting[language=C, style=StyleC, caption=alt-EVP.c, captionpos=b, label=alt-EVP.c]{../../openssl/openssl-Programm/alt/EVP.c}
 \subsubsection{Programm Output:}
 \begin{figure}[!htb]
     \centering
@@ -35,3 +32,23 @@ und darf ohne Lizenzgebühren eingesetzt sowie in Soft- und Hardware implementie
     \caption{Programm-Output}
     \label{caption:Programm-Output}
 \end{figure}
+
+\newpage
+\section{Finales Programm als kleines Command line tool}
+\lstinputlisting[language=C, style=StyleC, caption=main.c, captionpos=b, label=main.c]{../../openssl/openssl-Programm/main.c}
+\lstinputlisting[language=C, style=StyleC, caption=Encryption.c, captionpos=b, label=Encryption.c]{../../openssl/openssl-Programm/Encryption.c}
+\lstinputlisting[language=C, style=StyleC, caption=FileInput.c captionpos=b, label=FileInput.c]{../../openssl/openssl-Programm/FileInput.c}
+
+\subsection{Programm Output:}
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[scale=0.70]{Programm Output.png}
+    \caption{Programm Output}
+    \label{caption:Programm Output}
+\end{figure}
+
+
+
+
+
+
